# math-mcp

./: .gitignore  Builed_Code.md  LICENSE  README.ja.md  README.md  V1.md  environment.yml  math-mcp-implementation-guide.md  pyproject.toml  score.md
.github/workflows/: ci.yml
benchmarks/: basic_latency.py  operation_matrix.json
evals/: math_agent_cases.jsonl
examples/: mcp_client_smoke.py  sample_calls.md
src/math_mcp/: __init__.py  __main__.py  backend_caveats.py  config.py  errors.py  operation_registry.py  schema_check.py  schemas.py  server.py  status.py
tests/: conftest.py  test_algebra.py  test_benchmarks.py  test_calculus.py  test_capabilities.py  test_ci_gate.py  test_complex_tools.py  test_conformance.py  test_counterexample.py  test_differential.py  test_discrete.py  test_error_codes.py  test_evals.py  test_geometry.py  test_graph.py  test_inequalities.py  test_logic.py  test_matrix.py  test_number_theory.py  test_ode.py  test_operation_registry.py  test_parsing_sympy.py  test_probability.py  test_sandbox.py  test_schemas.py  test_security.py  test_seed_determinism.py  test_server_smoke.py  test_sets.py  test_timeouts.py  test_trigonometry.py  test_v1_optimizations.py  test_verification.py  test_z3_tools.py
tests/golden/: algebra_cases.json  calculus_cases.json  complex_cases.json  discrete_cases.json  geometry_cases.json  graph_cases.json  inequality_cases.json  logic_cases.json  matrix_cases.json  number_theory_cases.json  ode_cases.json  probability_cases.json  set_cases.json  trigonometry_cases.json  verification_cases.json  z3_cases.json
(+38 files in other folders)
